@@ -191,7 +191,7 @@ static void VID_MenuKey (int key);
 
 static int VID_SetMode (int modenum, unsigned char *palette);
 static void AppActivate(BOOL fActive, BOOL minimize);
-static LONG WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam);
+static LRESULT WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam);
 
 
 /*
@@ -708,7 +708,7 @@ static void VID_RegisterWndClass (HINSTANCE hInstance)
 	WNDCLASS	wc;
 
 	wc.style		= 0;
-	wc.lpfnWndProc		= (WNDPROC)MainWndProc;
+	wc.lpfnWndProc		= MainWndProc;
 	wc.cbClsExtra		= 0;
 	wc.cbWndExtra		= 0;
 	wc.hInstance		= hInstance;
@@ -2984,10 +2984,10 @@ static UINT	uMSG_MOUSEWHEEL = 0;
 extern cvar_t	mwheelthreshold;
 
 /* main window procedure */
-static LONG WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
+static LRESULT WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
-//	LONG	lRet = 0;	// ignore irrelevant messages in DDRAW/VESA/VGA modes
-	LONG	lRet = (DDActive);
+//	LRESULT	ret = 0;// Pa3PyX: ignore irrelevant messages in DDRAW/VESA/VGA modes
+	LRESULT	ret = (LRESULT) DDActive;
 	int	fActive, fMinimized, temp;
 	HDC		hdc;
 	PAINTSTRUCT	ps;
@@ -3060,7 +3060,7 @@ static LONG WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lPar
 			if (!in_mode_set)
 				S_BlockSound ();
 
-			lRet = DefWindowProc (hWnd, uMsg, wParam, lParam);
+			ret = DefWindowProc (hWnd, uMsg, wParam, lParam);
 
 			if (!in_mode_set)
 				S_UnblockSound ();
@@ -3212,7 +3212,7 @@ static LONG WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lPar
 			InvalidateRect (mainwindow, NULL, false);
 
 		// specifically required if WM_QUERYNEWPALETTE realizes a new palette
-			lRet = TRUE;
+			ret = (LRESULT) TRUE;
 		}
 		break;
 
@@ -3246,7 +3246,7 @@ static LONG WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lPar
 
 	case MM_MCINOTIFY:
 #if !defined(_NO_CDAUDIO)
-		lRet = CDAudio_MessageHandler (hWnd, uMsg, wParam, lParam);
+		ret = CDAudio_MessageHandler (hWnd, uMsg, wParam, lParam);
 #endif	/* ! _NO_CDAUDIO */
 		break;
 
@@ -3255,12 +3255,12 @@ static LONG WINAPI MainWndProc (HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lPar
 		if (DDActive)
 			break;
 		/* pass all unhandled messages to DefWindowProc */
-		lRet = DefWindowProc (hWnd, uMsg, wParam, lParam);
+		ret = DefWindowProc (hWnd, uMsg, wParam, lParam);
 		break;
 	}
 
 	/* return 1 if handled message, 0 if not */
-	return lRet;
+	return ret;
 }
 
 
